src/snapshots/rust_webpack_template__life__snapshots__horizontal_line.snap
---
source: src/life.rs
expression: "format!(\"Before:\\n{}\\nAfter:\\n{}\\nEvents: {}\", before, after, events)"
---
Before:
   
xxx
   

After:
 x 
 x 
 x 

Events: Died(Cell { coords: Coord(1, 2), color: Color(1.0, 0.0, 0.0) })\nDied(Cell { coords: Coord(1, 0), color: Color(1.0, 0.0, 0.0) })\nBorn(Cell { coords: Coord(2, 1), color: Color(1.0, 1.0, 1.0) })\nBorn(Cell { coords: Coord(0, 1), color: Color(1.0, 1.0, 1.0) })
