src/snapshots/rust_webpack_template__life__snapshots__line.snap
---
source: src/life.rs
expression: "format!(\"Before:\\n{}\\nAfter:\\n{}\", before, after)"
---
Before:
   
xxx
   

After:
 x 
 x 
xx 

