src/snapshots/rust_webpack_template__life__snapshots__vertical_line.snap
---
source: src/life.rs
expression: "format!(\"Before:\\n{}\\nAfter:\\n{}\\nEvents: {}\", before, after, events)"
---
Before:
 x 
 x 
 x 

After:
   
xxx
   

Events: Born(Cell { coords: Coord(1, 0), data: () })
Born(Cell { coords: Coord(1, 2), data: () })
Died(Cell { coords: Coord(0, 1), data: () })
Died(Cell { coords: Coord(2, 1), data: () })
